use env var for sonar token